@@ -2333,6 +2333,12 @@ ensure_file_is_selected(FileView *view, const char name[])
 	int file_pos;
 	char nm[NAME_MAX];
 
+	/* Don't reset filters to find "file with empty name". */
+	if(name[0] == '\0')
+	{
+		return 0;
+	}
+
 	/* This is for compatibility with paths loaded from vifminfo that have
 	 * trailing slash. */
 	copy_str(nm, sizeof(nm), name);
