@@ -157,6 +157,9 @@
 	Fixed recovery after a try to assign ill-formed value to 'viewcolumns'
 	option.
 
+	Fixed unintentional filters resetting on menu navigation to paths that
+	have trailing slash.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
